--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,16 +8,24 @@ sites:
     url: https://zyrouge.gq
   - name: Backend
     url: https://server.zyrouge.gq/ping
+  - name: Guides
+    url: https://guides.zyrouge.gq
+  - name: Genius-Lyrics Docs
+    url: https://genius-lyrics.zyrouge.gq
+  - name: Keyvify Docs
+    url: https://keyvify.js.org
+  - name: Skyceil (JSDoc Theme)
+    url: https://skyceil.zyrouge.gq
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
   cname: status.zyrouge.gq
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://raw.githubusercontent.com/zyrouge/status.zyrouge.gq/master/assets/logo.svg
   name: Web Status - Zyrouge
-  introTitle: "**kekw** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # introTitle: "**kekw** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  # introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   # theme: ocean
   navbar:
     - title: Status
