--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,6 +23,7 @@ status-website:
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/zyrouge/status.zyrouge.gq/master/assets/logo.svg
+  faviconSvg: https://raw.githubusercontent.com/zyrouge/status.zyrouge.gq/master/assets/logo.svg
   name: Web Status - Zyrouge
   # introTitle: "**kekw** is the open-source uptime monitor and status page, powered entirely by GitHub."
   # introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
